--- a/.inputrc
+++ b/.inputrc
@@ -1,2 +1,7 @@
 set editing-mode vi
 set keymap vi-command
+
+# Show all completions as soon as I press tab, even if there's more than one
+set show-all-if-ambiguous on
+# Ignore case
+set completion-ignore-case on
